# rpi-baby-monitor

./: README.md
motion_detector_opencv/: CMakeLists.txt  motion_detector.cpp
scripts/: photo_taker.sh
